Fix mobile view

--- a/index.html
+++ b/index.html
@@ -4,144 +4,163 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Haitham Alshari</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
   </head>
   <body>
-    <div class="nav-links">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
+    <div class="pt1main">
+      <div class="nav-links">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
 
-        <a href="https://www.linkedin.com/in/haitham-alshari/"><img src="img/linkedin.png" alt="" class="social" /></a>
-        <a href="https://www.facebook.com/haitham.alshari"><img src="img/facebook.png" alt="" class="social" /></a>
-        <a href="https://twitter.com/HaithamAlshari"><img src="img/twitter.png" alt="" class="social" /></a>
-        <a href="https://www.instagram.com/haithamalshari/"><img src="img/instagram.png" alt="" class="social" /></a>
-      </ul>
-    </div>
-    <main class="main">
-      <div class="pt1">
-        <div class="pt1text">
-          <p class="name">I'm Haitham Alshari</p>
-          <h1 class="dis1">I Am Professional</h1>
-          <h1 class="dis1">Full Stack Developer</h1>
-          <p class="dis2">
-            My name is Haitham Alshari. I am a researcher in the field of
-            Artificial intelligence, especially its applications in the field of
-            medicine. I have strong programming skills in many languages like
-            Python, Django, HTML, CSS, SCSS, JavaScript, R, C, and C++.
-          </p>
+          <a href="https://www.linkedin.com/in/haitham-alshari/"><img src="img/linkedin.png" alt="" class="social" /></a>
+          <a href="https://www.facebook.com/haitham.alshari"><img src="img/facebook.png" alt="" class="social" /></a>
+          <a href="https://twitter.com/HaithamAlshari"><img src="img/twitter.png" alt="" class="social" /></a>
+          <a href="https://www.instagram.com/haithamalshari/"><img src="img/instagram.png" alt="" class="social" /></a>
+        </ul>
+      </div>
+      <div class="dropdown">
+        <button onclick="myFunction()" class="dropbtn"><img src="img/menu.png" class="img-menu"></button>
+        <div id="myDropdown" class="dropdown-content">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Services</a>
+          <a href="#">Portfolio</a>
+          <a href="#">Contact</a>
         </div>
-        <img src="img/coder.png" alt="" id="imghead" />
+      </div>
+        <div class='socMedia'>
+          <a href="https://www.linkedin.com/in/haitham-alshari/"><img src="img/linkedin.png" alt="" class="social" /></a>
+          <a href="https://www.facebook.com/haitham.alshari"><img src="img/facebook.png" alt="" class="social" /></a>
+          <a href="https://twitter.com/HaithamAlshari"><img src="img/twitter.png" alt="" class="social" /></a>
+          <a href="https://www.instagram.com/haithamalshari/"><img src="img/instagram.png" alt="" class="social" /></a>
+        </div>
+        <div class="pt1">
+          <div class="pt1text">
+            <p class="name">I'm Haitham Alshari</p>
+            <h1 class="dis1">I Am Professional</h1>
+            <h1 class="dis1">Full Stack Developer</h1>
+            <p class="dis2">
+              My name is Haitham Alshari. I am a researcher in the field of
+              Artificial intelligence, especially its applications in the field of
+              medicine. I have strong programming skills in many languages like
+              Python, Django, HTML, CSS, SCSS, JavaScript, R, C, and C++.
+            </p>
+          </div>
+          <img src="img/coder.png" alt="" id="imghead" />
+        </div>
       </div>
       <div class="pt2">
-      <div class="pt2up">
-          <div class="line">-    -</div>
-          <p class="abouth">About Me</p>
-      </div>
-      <div class="pt2down">
-        <div class="pt2left">
-          <p class="aboutp">
-            I build brands and beautiful digital experiences design.
-          </p>
-          <div class="bar">
-            Python
-            <div class="python" >.</div>
-            Django
-            <div class="django" >.</div>
-            HTML
-            <div class="html">.</div>
-            CSS
-            <div class="css">.</div>
-            JavaScript
-            <div class="js"">.</div>
-            C
-            <div class="c">.</div>
+        <div class="pt2up">
+            <div class="line">-    -</div>
+            <p class="abouth">About Me</p>
+        </div>
+        <div class="pt2down">
+          <div class="pt2left">
+            <p class="aboutp">
+              I build brands and beautiful digital experiences design.
+            </p>
+            <div class="bar">
+              Python
+              <div class="python" >.</div>
+              Django
+              <div class="django" >.</div>
+              HTML
+              <div class="html">.</div>
+              CSS
+              <div class="css">.</div>
+              JavaScript
+              <div class="js"">.</div>
+              C
+              <div class="c">.</div>
+            </div>
+          </div>
+          <div class="pt2right">
+              <p class="summary1">
+              Fluent in Arabic, English, and Turkish. I am a researcher in the
+              field of Artificial intelligence, especially its applications in the
+              field of medicine. 
+            </p>
+            <p class="summary2">
+              I have strong programming skills in many
+              languages like Python, Django, HTML, CSS, SCSS, JavaScript, R, C,
+              and C++. I am also a graphic designer with a lot of experience in
+              Photoshop, Illustrator, Premiere, Aftereffect, and Final Cut Pro X.
+              And I can work with Windows, macOS, and Linux. Strong work ethics,
+              management skills. Creative, adaptable, and innovative. Great
+              ability to analyze and disseminate information. Adequacy in handling
+              administrative and office tasks.
+            </p>
           </div>
         </div>
-        <div class="pt2right">
-            <p class="summary1">
-            Fluent in Arabic, English, and Turkish. I am a researcher in the
-            field of Artificial intelligence, especially its applications in the
-            field of medicine. 
-          </p>
-          <p class="summary2">
-            I have strong programming skills in many
-            languages like Python, Django, HTML, CSS, SCSS, JavaScript, R, C,
-            and C++. I am also a graphic designer with a lot of experience in
-            Photoshop, Illustrator, Premiere, Aftereffect, and Final Cut Pro X.
-            And I can work with Windows, macOS, and Linux. Strong work ethics,
-            management skills. Creative, adaptable, and innovative. Great
-            ability to analyze and disseminate information. Adequacy in handling
-            administrative and office tasks.
-          </p>
-        </div>
-      </div>
       </div>
       <div class="pt3">
-      <div class="pt3up">
-        <div class="pt3up1">
-          <div class="line2">-    -</div>
-          <p class="services">Services</p>
+        <div class="pt3up">
+          <div class="pt3up1">
+            <div class="line2">-    -</div>
+            <p class="services">Services</p>
+          </div>
+          <div class="pt3up2">
+            <p class="serdis">What's services I offer</p>
+          </div>
         </div>
-        <div class="pt3up2">
-          <p class="serdis">What's services I offer</p>
+        <div class="pt3down">
+            <div class="proj1">
+              <img src="img/thu.png" alt="" class="projimg">
+            </div>
+            <div class="proj2">
+              <img src="img/ett.png" alt="" class="projimg">
+            </div>
+            <div class="proj3">
+              <img src="img/yac.png" alt="" class="projimg">
+            </div>
+            <div class="proj4">
+              <img src="img/Degital_marketing_PNG.png" alt="" class="projimg">
+            </div>
+            <div class="proj5">
+              <img src="img/app_development_PNG.png" alt="" class="projimg">
+            </div>
+            <div class="proj6">
+              <img src="img/Analytics_PNG.png" alt="" class="projimg">
+            </div>
         </div>
-      </div>
-      <div class="pt3down">
-          <div class="proj1">
-            <img src="img/thu.png" alt="" class="projimg">
-          </div>
-          <div class="proj2">
-            <img src="img/ett.png" alt="" class="projimg">
-          </div>
-          <div class="proj3">
-            <img src="img/yac.png" alt="" class="projimg">
-          </div>
-          <div class="proj4">
-            <img src="img/Degital_marketing_PNG.png" alt="" class="projimg">
-          </div>
-          <div class="proj5">
-            <img src="img/app_development_PNG.png" alt="" class="projimg">
-          </div>
-          <div class="proj6">
-            <img src="img/Analytics_PNG.png" alt="" class="projimg">
-          </div>
-      </div>
       </div>
       <div class="pt4">
-      <div class="pt4up">
-        <div class="pt4up1">
-          <div class="line3">-    -</div>
-          <p class="portfolio">Portfolio</p>
+        <div class="pt4up">
+          <div class="pt4up1">
+            <div class="line3">-    -</div>
+            <p class="portfolio">Portfolio</p>
+          </div>
+          <div class="pt4up2">
+            <p class="serdis">An eye for detail makes my work excellent</p>
+          </div>
         </div>
-        <div class="pt4up2">
-          <p class="serdis">An eye for detail makes my work excellent</p>
+        <div class="pt4down">
+            <div class="proj1">
+              Portfolio01
+            </div>
+            <div class="proj2">
+              Portfolio01
+            </div>
+            <div class="proj3">
+              Portfolio01
+            </div>
+            <div class="proj4">
+              Portfolio01
+            </div>
+            <div class="proj5">
+              Portfolio01
+            </div>
+            <div class="proj6">
+              Portfolio01
+            </div>
         </div>
       </div>
-      <div class="pt4down">
-          <div class="proj1">
-            Portfolio01
-          </div>
-          <div class="proj2">
-            Portfolio01
-          </div>
-          <div class="proj3">
-            Portfolio01
-          </div>
-          <div class="proj4">
-            Portfolio01
-          </div>
-          <div class="proj5">
-            Portfolio01
-          </div>
-          <div class="proj6">
-            Portfolio01
-          </div>
-      </div>
-      </div>
-    </main>
   </body>
 </html>
