--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@
         <div class="pt1">
           <div class="pt1text">
             <p class="name">I'm Haitham Alshari</p>
-            <h1 class="dis1">I Am Professional</h1>
-            <h1 class="dis1">Full Stack Developer</h1>
+            <h1 class="dis1">I Am a</h1>
+            <h1 class="dis1">- Machine Learning Engineer</h1>
+            <h1 class="dis1">- Full Stack Developer</h1>
+            <h1 class="dis1">- Graphic Designer</h1>
             <p class="dis2">
               My name is Haitham Alshari. I am a researcher in the field of
               Artificial intelligence, especially its applications in the field of
               medicine. I have strong programming skills in many languages like
               Python, Django, HTML, CSS, SCSS, JavaScript, R, C, and C++.
+              I am also a graphic designer with a lot of experience in Photoshop,
+              Illustrator, Premiere, Aftereffect, and Final Cut Pro X.
             </p>
           </div>
           <img src="img/coder.png" alt="" id="imghead" />
@@ -112,22 +116,28 @@
         </div>
         <div class="pt3down">
             <div class="proj1">
-              <img src="img/thu.png" alt="" class="projimg">
+              <img src="img/Ai.svg" alt="" class="projimg">
+              <h2 class="projtext">Machine Learning</h2>
             </div>
             <div class="proj2">
-              <img src="img/ett.png" alt="" class="projimg">
+              <img src="img/coding.svg" alt="" class="projimg">
+              <h2 class="projtext">Programming</h2>
             </div>
             <div class="proj3">
-              <img src="img/yac.png" alt="" class="projimg">
+              <img src="img/Front-end.svg" alt="" class="projimg">
+              <h2 class="projtext">Websites</h2>
             </div>
             <div class="proj4">
-              <img src="img/Degital_marketing_PNG.png" alt="" class="projimg">
+              <img src="img/graphic.svg" alt="" class="projimg">
+              <h2 class="projtext">Graphic Design</h2>
             </div>
             <div class="proj5">
-              <img src="img/app_development_PNG.png" alt="" class="projimg">
+              <img src="img/video.svg" alt="" class="projimg">
+              <h2 class="projtext">Video Editing</h2>
             </div>
             <div class="proj6">
-              <img src="img/Analytics_PNG.png" alt="" class="projimg">
+              <img src="img/Photograph.svg" alt="" class="projimg">
+              <h2 class="projtext">Photography</h2>
             </div>
         </div>
       </div>
@@ -143,24 +153,33 @@
         </div>
         <div class="pt4down">
             <div class="proj1">
-              Portfolio01
+              <img src="img/logo01.jpg" alt="" class="projimg">
+              <h2 class="projtext">Energy Projects Company</h2>
             </div>
             <div class="proj2">
-              Portfolio01
+              <img src="img/logo02.jpg" alt="" class="projimg">
+              <h2 class="projtext">Belaraby Courses</h2>
             </div>
             <div class="proj3">
-              Portfolio01
+              <img src="img/logo03.jpg" alt="" class="projimg">
+              <h2 class="projtext">Bin Swad For Batteries</h2>
             </div>
             <div class="proj4">
-              Portfolio01
+              <img src="img/logo04.jpg" alt="" class="projimg">
+              <h2 class="projtext">Isnat Organization</h2>
             </div>
             <div class="proj5">
-              Portfolio01
+              <img src="img/logo05.jpg" alt="" class="projimg">
+              <h2 class="projtext">Loaloat Almoared</h2>
             </div>
             <div class="proj6">
-              Portfolio01
+              <img src="img/Logo06.jpg" alt="" class="projimg">
+              <h2 class="projtext">SuccessHR</h2>
             </div>
         </div>
+      </div>
+      <div class="pt5">
+          <h3> All rights reserved for Haithm Alshari</h3>
       </div>
   </body>
 </html>
