fix successhr image

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <h2 class="projtext">Loaloat Almoared</h2>
             </div>
             <div class="proj6">
-              <img src="img/Logo06.jpg" alt="" class="projimg">
+              <img src="img/logo06.jpg" alt="" class="projimg">
               <h2 class="projtext">SuccessHR</h2>
             </div>
         </div>
