--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
 
     <title>Haitham Alshari</title>
+    <link rel="shortcut icon" type="image/jpg" href="assets/img/Favicon.png" />
   </head>
   <body>
     <!--==================== HEADER ====================-->
@@ -199,7 +200,7 @@
             <div class="about__buttons">
               <a
                 download=""
-                href="assets/pdf/Alexa-Cv.pdf"
+                href="assets/pdf/Resume -Haithm-Alshari.pdf"
                 class="button button--flex"
               >
                 Download CV<i class="uil uil-download-alt button__icon"></i>
@@ -879,32 +880,43 @@
             <div class="contact__inputs grid">
               <div class="contact__content">
                 <label for="" class="contact__label">Name</label>
-                <input type="text" class="contact__input" />
+                <input type="text" id="name" class="contact__input" required />
               </div>
               <div class="contact__content">
                 <label for="" class="contact__label">Email</label>
-                <input type="email" class="contact__input" />
+                <input
+                  type="email"
+                  id="email"
+                  class="contact__input"
+                  required
+                />
               </div>
             </div>
             <div class="contact__content">
               <label for="" class="contact__label">Project</label>
-              <input type="text" class="contact__input" />
+              <input type="text" id="project" class="contact__input" required />
             </div>
             <div class="contact__content">
               <label for="" class="contact__label">Message</label>
               <textarea
                 name=""
-                id=""
+                id="message"
                 cols="0"
                 rows="7"
                 class="contact__input"
+                required
               ></textarea>
             </div>
             <div>
-              <a href="#" class="button button--flex">
+              <!-- <a href="#" class="button button--flex">
                 Send Message
                 <i class="uil uil-message button__icon"></i>
-              </a>
+              </a> -->
+              <input
+                type="submit"
+                class="button button--flex"
+                value="Send Message"
+              /><i class="uil uil-message button__icon submit-icon"></i>
             </div>
           </form>
         </div>
@@ -969,6 +981,9 @@
     </a>
     <!--==================== SWIPER JS ====================-->
     <script src="assets/js/swiper-bundle.min.js"></script>
+
+    <!-- ==================== SMTP JS ==================== -->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 
     <!--==================== MAIN JS ====================-->
     <script src="assets/js/main.js"></script>
