--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!--==================== manifest file for PWA ====================-->
+    <link rel="manifest" href="./manifest.json">
 
     <!--==================== UNICONS ====================-->
     <link
